--- a/css/css.css
+++ b/css/css.css
@@ -187,7 +187,7 @@ input::-ms-clear {
 
 .screentwo {
     background-size: 100% 100%;
-    background-image: url("../images/bg1.jpg");
+    background-image: url("../images/bg1.png");
     width: 100%;
     height: 630px;
 }
